# stVenantTorsion

./: .gitignore  CMakeLists.txt  README.md  stVenantTorsion.kdev4
cmake/: FindLaplace.cmake
src/: CMakeLists.txt  bem.cpp  bem.h  fem.cpp  fem.h  stVenantPy.cpp
tests/: test_1.py
